<resources>
    <string name="app_name">GET FIT</string>
    <string name="app_icon">material apple icon</string>
    <string name="username_field">User Name</string>
    <string name="password_field">Password</string>
    <string name="login_button">Log In</string>
    <string name="create_new">CREATE NEW</string>
    <string-array name="tabs">
        <item>Today</item>
        <item>Search Food</item>
        <item>History</item>
        <item>Favourites</item>
        <item>Preferences</item>
        <item>Account</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_title">food...</string>
    <string name="search_hint">food...</string>

    <string name="alpha_num">abcdefghijklmnopqrstuvwxyz0123456789</string>
    <string name="plus_sign">+</string>
    <string name="close_drawer">close drawer</string>
    <string name="open_drawer">open drawer</string>
</resources>
