<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.steveq.getfit.MainActivity">

    <ImageView
        android:id="@+id/appleImageView"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:src="@drawable/apple__material_100px"
        android:contentDescription="@string/app_icon"/>

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/appleImageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:hint="@string/username_field"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:maxLength="20"
        android:inputType="textPersonName"
        android:textColorHint="@color/material_red_300_155"/>


    <EditText
        android:id="@+id/passwordEditText"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appleImageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:hint="@string/password_field"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:maxLength="20"
        android:textColorHint="@color/material_red_300_155"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:text="@string/login_button"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:background="@drawable/rounded_button"/>
</RelativeLayout>
