<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".controller.LoginActivity">

    <ImageView
        android:id="@+id/appleImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:src="@drawable/apple__material_100px"
        android:contentDescription="@string/app_icon"/>
    <TextView
        android:id="@+id/getNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/appleImageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="GET FIT"
        android:textSize="36sp"
        android:textColor="@color/material_red_300_155"
        />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/getNameTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:hint="@string/username_field"
        android:textSize="24sp"
        android:maxLength="20"
        android:inputType="textPersonName"
        android:textColorHint="@color/material_red_300_155"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appleImageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:hint="@string/password_field"
        android:textSize="24sp"
        android:maxLength="20"
        android:textColorHint="@color/material_red_300_155"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:text="@string/login_button"
        android:textSize="24sp"
        android:background="@drawable/rounded_button"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"/>


    <Button
        android:visibility="invisible"
        android:id="@+id/createNewUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:text="@string/create_new"
        android:textSize="24sp"
        android:background="@drawable/rounded_button"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"/>
</RelativeLayout>
